--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -6,7 +6,7 @@
     <h1 class="display-3">Secrets</h1>
     <p class="secret-text">Don't keep your secrets, share them anonymously!</p>
     <div class = "error">
-      <% if(errors.length) { %>
+      <% if(errors.isArray()) { %>
         <% errors.forEach(error => { %>
         <p> <%= error.msg || error.message %></p>
         <% }) %>
